<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.unlokk.onboarding.fragments.ApplyLoanFragment">

    <!--    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">-->

    <com.zigis.labeledseekslider.LabeledSeekSlider
        android:id="@+id/amount_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lss_activeTrackColor="@color/light_red"
        app:lss_bubbleOutlineColor="@color/light_grey"
        app:lss_bubbleValueTextColor="@color/black"
        app:lss_bubbleValueTextFont="@font/ttnorms_bold"
        app:lss_bubbleValueTextSize="14sp"
        app:lss_defaultValue="550"
        app:lss_inactiveTrackColor="@color/light_grey"
        app:lss_isDisabled="false"
        app:lss_limitValue="850"
        app:lss_limitValueIndicator="@string/slider_max"
        app:lss_maxValue="1000"
        app:lss_minValue="100"
        app:lss_rangeValueTextColor="@color/grey"
        app:lss_rangeValueTextFont="@font/ttnorms_regular"
        app:lss_rangeValueTextSize="12sp"
        app:lss_slidingInterval="50"
        app:lss_thumbSliderBackgroundColor="@color/white"
        app:lss_thumbSliderRadius="12dp"
        app:lss_title="@string/slider_amount"
        app:lss_titleTextColor="@color/grey"
        app:lss_titleTextFont="@font/ttnorms_regular"
        app:lss_titleTextSize="12sp"
        app:lss_trackHeight="4dp"
        app:lss_unit="€"
        app:lss_unitPosition="back"
        app:lss_vibrateOnLimitReached="true"
        tools:ignore="MissingConstraints" />

    <com.zigis.labeledseekslider.LabeledSeekSlider
        android:id="@+id/term_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_slider"
        app:lss_activeTrackColor="@color/light_red"
        app:lss_bubbleOutlineColor="@color/light_grey"
        app:lss_bubbleValueTextColor="@color/black"
        app:lss_bubbleValueTextFont="@font/ttnorms_bold"
        app:lss_bubbleValueTextSize="14sp"
        app:lss_defaultValue="6"
        app:lss_inactiveTrackColor="@color/light_grey"
        app:lss_isDisabled="false"
        app:lss_limitValue="12"
        app:lss_limitValueIndicator="@string/slider_max"
        app:lss_maxValue="12"
        app:lss_minValue="1"
        app:lss_rangeValueTextColor="@color/grey"
        app:lss_rangeValueTextFont="@font/ttnorms_regular"
        app:lss_rangeValueTextSize="12sp"
        app:lss_slidingInterval="1"
        app:lss_thumbSliderBackgroundColor="@color/white"
        app:lss_thumbSliderRadius="12dp"
        app:lss_title="@string/slider_period"
        app:lss_titleTextColor="@color/grey"
        app:lss_titleTextFont="@font/ttnorms_regular"
        app:lss_titleTextSize="12sp"
        app:lss_trackHeight="4dp"
        app:lss_unit="@string/month"
        app:lss_unitPosition="back"
        app:lss_vibrateOnLimitReached="true"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term_slider"
        tools:listitem="@layout/adapter_loan_issuance_details_item" />

    <TextView
        android:id="@+id/apr_textView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/ttnorms_regular"
        android:text="@string/repayment_apr_description_label"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <Button
        android:id="@+id/confirmation_button"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button"
        android:fontFamily="@font/ttnorms_regular"
        android:text="@string/get_a_loan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="normal|bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apr_textView" />

    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>